add map styling on subdomain and remove unused stats

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -20,4 +20,5 @@
 @import 'elements/tabs';
 @import 'elements/last-match';
 @import 'elements/player-stats';
+@import 'elements/player-maps';
 @import 'elements/stats';
