--- a/app/views/fireteam/index.html
+++ b/app/views/fireteam/index.html
@@ -3,7 +3,15 @@
     <ng-include src="'views/fireteam/player.html'"></ng-include>
   </li>
 </ul>
-<div class="col-xs-12 col-sm-6 col-md-4 hidden-xs" ng-if="fireteam[0].name && $index < 3" ng-repeat="player in fireteam track by $index">
+<div class="col-xs-12 col-sm-6 col-md-4 hidden-xs"
+     ng-class="player.isEditing ? 'is-editing' : 'not-editing'"
+     ng-if="fireteam[0].name && $index < 3"
+     ng-repeat="player in fireteam track by $index">
+  <button class="btn btn-default" type="button"
+          ng-click="toggleEdit(player)">
+    Edit
+  </button>
+  <span ng-if="player.isEditing">Im Editing!</span>
   <!--<div class="row ml-0 mr-0" ng-show="$index === 0">
     <div class="btn-group btn-group-justified shadow-z-1" style="height: 36px;">
       <div class="btn-group">
