--- a/app/styles/elements/_player.scss
+++ b/app/styles/elements/_player.scss
@@ -2,6 +2,11 @@
   background: #fff;
   border-radius: 1em;
   margin-bottom: 30px;
+  position: relative;
+}
+
+.player__info {
+  position: relative;
 }
 
 .player__intro {
