--- a/app/views/fireteam/info.html
+++ b/app/views/fireteam/info.html
@@ -6,6 +6,9 @@
        style="background-image:url('{{player.background[0]}}');">
     <div class="player__title">
       <img class="player__emblem" src="{{player.emblem}}" />
+      <span class="player__edit" ng-show="$index !== 0" ng-click="toggleEdit(player)">
+        <i class="material-icons">edit mode</i>
+      </span>
       <div class="player__kd">
         <span ng-bind="player.stats.killsDeathsRatio.basic.displayValue"></span>
         <label>K/D</label>
