html cleanup, remove suggest players btn, updates

--- a/app/views/fireteam/info.html
+++ b/app/views/fireteam/info.html
@@ -2,8 +2,7 @@
      data-intro="Hovering over the playercard will reveal subclass perks"
      data-position="top"
      chardin-show="{{isHelpOverlayElement(fireteam.length, $index)}}">
-  <div class="player__intro"
-       style="background-image:url('{{player.background[0]}}');">
+  <div class="player__intro" style="background-image:url('{{player.background[0]}}')">
     <div class="player__title">
       <img class="player__emblem" src="{{player.emblem}}" />
       <span class="player__edit" ng-show="$index !== 0" ng-click="toggleEdit(player)">
