--- a/app/views/fireteam/player.html
+++ b/app/views/fireteam/player.html
@@ -4,14 +4,14 @@
   <ng-include src="infoPartial"></ng-include>
 
   <tabset class="player-tabs">
-    <tab heading="Equipped" analytics-on analytics-event="Click" analytics-category="Equipped" class="">
+    <tab heading="Equipped" analytics-on analytics-event="Click" analytics-category="Equipped">
       <ng-include src="'views/fireteam/weapons.html'"></ng-include>
       <ng-include src="'views/fireteam/gear.html'"></ng-include>
     </tab>
-    <tab heading="Last Match" analytics-on analytics-event="Click" analytics-category="Last Match" class="">
+    <tab heading="Last Match" analytics-on analytics-event="Click" analytics-category="Last Match">
       <ng-include src="'views/fireteam/history.html'"></ng-include>
     </tab>
-    <tab heading="Stats" analytics-on analytics-event="Click" analytics-category="Stats" class="">
+    <tab heading="Stats" analytics-on analytics-event="Click" analytics-category="Stats">
       <ng-include src="'views/fireteam/addStats.html'"></ng-include>
     </tab>
   </tabset>
@@ -21,7 +21,7 @@
       <div class="col-xs-12 player__links__btns">
         <a href="http://my.destinytrialsreport.com/{{player.membershipType === 2 ? 'ps' : 'xbox'}}/{{player.name}}"
            type="button" target="_blank"
-           class="btn btn-default btn-trials bg-info dk m-0 b-0"
+           class="btn btn-default"
            analytics-on analytics-event="Click" analytics-category="myDestinyTrialsReport"
            data-intro="Links to <strong>myDestinyTrialsReport</strong> for summary of player's guardians"
            data-position="left"
@@ -30,7 +30,7 @@
         </a>
         <a href="http://destinytracker.com/destiny/playlists/{{player.membershipType === 2 ? 'ps' : 'xbox'}}/{{player.name}}/trialsOfOsiris"
            type="button" target="_blank"
-           class="btn btn-default btn-trials bg-info dker m-0 b-0"
+           class="btn btn-default"
            analytics-on analytics-event="Click" analytics-category="DestinyTracker"
            data-intro="Links to <strong>DestinyTracker</strong> for more detailed statistics based on all characters and maps"
            data-position="right"
@@ -52,27 +52,19 @@
             <i class="material-icons">send</i>
           </button>
           <input type="text" placeholder="{{fireteam[$index].name}}" class="form-control" ng-model="teammateName"
-               ng-class="helpOverlay && ($index === 2) ? 'z99999999' : 'z000000'" />
+                 ng-class="helpOverlay && ($index === 2) ? 'z99999999' : 'z000000'" />
         </form>
       </div>
       <div class="edit-player__actions">
         <div class="recent-players">
-          <span ng-hide="recentPlayers" class="input-group-btn">
-            <button class="btn btn-white btn-raised" type="button"
-                   ng-click="suggestRecentPlayers()"
-                   analytics-on analytics-event="Click"
-                   analytics-category="Suggest Recent Players">
-                   Suggest Recent Players
-            </button>
-          </span>
-         <div ng-show="recentPlayers" class="input-group-btn">
-           <button class="btn btn-white dropdown-toggle btn-raised" style="margin-right:-2px" type="button"
-                   id="dropdownMenuMobile{{($index)}}" data-toggle="dropdown"
-                   aria-haspopup="true" aria-expanded="true">
+          <div class="input-group-btn"><!-- class should be "btn-group" but: display issues -->
+            <button class="btn btn-white dropdown-toggle btn-raised" type="button"
+                    id="playerSelect{{$index}}" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
              Recent Players
              <span class="caret"></span>
            </button>
-           <ul class="dropdown-menu" aria-labelledby="dropdownMenuMobile{{$index}}">
+           <ul class="dropdown-menu" aria-labelledby="playerSelect{{$index}}">
              <li ng-repeat="player in recentPlayers track by $index">
                <a class="black-font" ng-bind="player.name" ng-click="setRecentPlayer(player, ($parent.$index))"
                   analytics-on analytics-event="Click" analytics-category="Recent From Dropdown">
@@ -82,7 +74,7 @@
          </div>
        </div>
        <div class="close-overlay">
-          <button class="btn btn-raised btn-white btn-xs" ng-click="toggleEdit(player)">Close</button>
+         <button class="btn btn-raised btn-white btn-xs" ng-click="toggleEdit(player)">Close</button>
        </div>
     </div>
   </div>
