--- a/app/styles/elements/_player.scss
+++ b/app/styles/elements/_player.scss
@@ -244,8 +244,9 @@
 .player__hazards {
   padding: 1em;
   white-space: nowrap;
-  overflow-x: scroll;
+  overflow-x: auto;
   border-top: 1px solid #eee;
+  line-spacing: 0;
 }
 
 .player-hazard {
@@ -257,6 +258,7 @@
   border-radius: 3px;
   margin-right: 3px;
   line-height: 1.3;
+  line-spacing: 1;
 
   & + .player-hazard--none {
     display: none;
@@ -266,7 +268,6 @@
 .player-hazard--friendly {
   color: #2196F3;
   border-color: #2196F3;
-  margin-right: 0;
 }
 
 .player-hazard--none {
