--- a/app/views/fireteam/history.html
+++ b/app/views/fireteam/history.html
@@ -78,11 +78,12 @@
           </div>
         </div>
         <div class="last-match-weapon last-match-weapon--{{specialWeapon.id}} col-xs-12" ng-repeat="specialWeapon in player.wKills track by $index"
-              ng-if="getWeaponTitle(specialWeapon.id)">
+             ng-if="getWeaponTitle(specialWeapon.id)">
           <div class="row">
             <div class="col-xs-6 last-weapon-weapon__descr">
-              <img class="last-match-weapon__img img-responsive">
-              <span class="last-match-weapon__title" ng-bind="getWeaponTitle(specialWeapon.id)"></span>
+              <img class="last-match-weapon__img img-responsive" ng-src="{{player.classNodes.abilities[specialWeapon.id].icon || ''}}">
+              <!-- <span class="last-match-weapon__title" ng-bind="getWeaponTitle(specialWeapon.id)"></span> -->
+              <span class="last-match-weapon__title" ng-bind="player.classNodes.abilities[specialWeapon.id].name"></span>
             </div>
             <div class="col-xs-2 stat">
               <span ng-bind="specialWeapon.count"></span>
