--- a/app/views/fireteam/history.html
+++ b/app/views/fireteam/history.html
@@ -15,7 +15,7 @@
     </div>
     <div class="row">
       <div class="col-xs-6 stat">
-        <span ng-bind="player.pastActivities[0].date"></span>
+        <span ng-bind="player.pastActivities[player.pastActivities.length - 1].dateAgo"></span>
         <label>Date</label>
       </div>
       <div class="col-xs-6 stat">
@@ -81,7 +81,7 @@
               ng-if="getWeaponTitle(specialWeapon.id)">
           <div class="row">
             <div class="col-xs-6 last-weapon-weapon__descr">
-              <img class="last-match-weapon__img img-responsive">
+              <span class="last-match-weapon__img" style="background-image: {{specialWeapon.icon}}"></span>
               <span class="last-match-weapon__title" ng-bind="getWeaponTitle(specialWeapon.id)"></span>
             </div>
             <div class="col-xs-2 stat">
