Changed personal records to character records, because that's what they are. Commented to slider for now.

--- a/app/views/fireteam/addStats.html
+++ b/app/views/fireteam/addStats.html
@@ -147,7 +147,7 @@
     <!--</div>-->
     <div class="player-stats__bests">
       <div class="stat-row__header">
-        Personal records
+        Character records
       </div>
       <div class="row stat-row">
         <div class="col-xs-6 stat">
