--- a/app/styles/elements/_tabs.scss
+++ b/app/styles/elements/_tabs.scss
@@ -23,6 +23,9 @@
       text-transform: uppercase;
       font-family: 'Roboto Condensed';
       transition: box-shadow linear .1s;
+      white-space: nowrap;
+      padding-left: 0;
+      padding-right: 0;
     }
 
     &:first-child {
