--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -8,36 +8,32 @@
 
       <article class="post-entry">
         <div class="entry-image">
-          <a href="#"><img src="/images/burning_shrine.jpg" class="img-responsive" alt="Image"></a>
-          <header>
-            <h2>
-              <em>Burning Shrine</em>
-            </h2>
-          </header>
+          <a href="#"><img src="/images/beta.png" class="img-responsive" alt="Image"></a>
+          <!--<header>-->
+            <!--<h2>-->
+              <!--<em>Burning Shrine</em>-->
+            <!--</h2>-->
+          <!--</header>-->
         </div>
 
         <div class="entry-title">
-          <h2 >Introducing: myDestinyTrialsReport</h2>
+          <h2>We want your feedback on our 2.0 beta!</h2>
         </div>
 
         <ul class="entry-meta clearfix">
           <li>
             <i class="fa fa-calendar-o"></i>
-            11th Aug 2015
+            16th Aug 2015
           </li>
         </ul>
 
         <div class="entry-content mt-10">
           <p>
-            Since we have seen a lot of interest in sharing your own stats through our app we have made it a little bit easier for you.
+           We are very close to releasing our v2.0 restyling and want your opinions and comments.
           </p>
           <p>
-            <strong>my.DestinyTrialsReport.com</strong> works just like our fireteam search but instead of partnering you up with your
-            recent trials teammates we group you with your other characters.
-          </p>
-          <p>
-            Navigate to <strong><a href="http://my.DestinyTrialsReport.com" target="_top">http://my.DestinyTrialsReport.com/</a> </strong>
-            and use the search.
+            You can find it at <strong><a href="http://beta.DestinyTrialsReport.com" target="_top">http://beta.DestinyTrialsReport.com/</a></strong>.
+            <br/>Feel free to use it for remainder of the weekend while we prepare for the change next week.
           </p>
           <p>
             <strong>If you come across any issue, error, or just want to send us a suggestion you can
