--- a/app/styles/elements/_player.scss
+++ b/app/styles/elements/_player.scss
@@ -283,6 +283,11 @@
   color: #B0BEC5;
 }
 
+ul[rn-carousel] {
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
 ul[rn-carousel] > li {
   position: relative;
   margin-left: -100%;
@@ -294,4 +299,9 @@ ul[rn-carousel] > li:first-child {
 
 ul[rn-carousel] img {
   max-width: 100%;
+}
+
+ul[rn-carousel] > li {
+  padding-left: 5px;
+  padding-right: 5px;
 }
