unify header, add map to my, html fixes, header changes

--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -1,3 +1,8 @@
+<div class="modal fade" id="mapModal" tabindex="-1" role="dialog" aria-labelledby="mapModalLabel">
+  <div class="modal-dialog br-10" role="document">
+    <img src="/images/ToO_BurningShrine_Heatmap.jpg" class="img-responsive" alt="Heatmap" />
+  </div>
+</div>
 <div class="wrapper">
   <header>
     <ng-include src="headerPartial"></ng-include>
