--- a/app/views/shared/header.html
+++ b/app/views/shared/header.html
@@ -4,19 +4,25 @@
       <div class="col-xs-12 header-bar__content">
         <h1 class="main-title">
           <a href="/" target="_self">
-            Destiny <span class="highlight">Trials</span> Report
+            <span ng-if="subdomain == 'my'" class="highlight">my</span>Destiny<span class="highlight">Trials</span>Report
           </a>
         </h1>
         <div class="header__actions hidden-xs">
-          <button type="button" class="btn" ng-click="toggleOverlay()" ng-show="fireteam">Help</button>
           <button type="button" class="btn" data-toggle="modal" data-target="#mapModal">Map</button>
-          <a type="button" class="btn my-report" href="http://my.destinytrialsreport.com" target="_self"><span class="highlight">my</span>Report</a>
+          <button type="button" class="btn" ng-click="toggleOverlay()" ng-show="fireteam">Help</button>
+          <a type="button" class="btn my-report" ng-if="subdomain != 'my'"
+             href="http://my.destinytrialsreport.com" target="_self">
+            <span class="highlight">my</span>Report
+          </a>
+          <a type="button" class="btn my-report" ng-if="subdomain == 'my'"
+             href="http://www.destinytrialsreport.com" target="_self">
+            <span class="highlight">trials</span>Report
+          </a>
         </div>
       </div>
     </div>
   </div>
 </div>
-
 <div class="main-search shadow-z-1">
   <div class="container-fluid">
     <div class="row">
@@ -42,7 +48,7 @@
                   <input type="text" class="form-control" placeholder="Enter profile name" ng-model="mainPlayer" ng-value="fireteam[0].name">
                 </div>
                 <div class="main-search__controls">
-                  <div class="main-search__refresh hidden-xs" ng-show="fireteam[0].name != null">
+                  <div class="main-search__refresh hidden-xs" ng-if="subdomain != 'my'" ng-show="fireteam[0].name != null">
                     <div class="btn-group">
                       <button class="btn btn-default btn-icon" type="button" ng-class="helpOverlay ? 'z99999999' : 'z000000'"
                               ng-click="refreshInventory()"
@@ -53,7 +59,7 @@
                       </button>
                     </div>
                   </div>
-                  <div class="btn-group hidden-xs" ng-show="fireteam[0].otherCharacters.length > 1">
+                  <div class="btn-group hidden-xs" ng-if="subdomain != 'my'" ng-show="fireteam[0].otherCharacters.length > 1">
                     <button class="btn btn-white dropdown-toggle" type="button" id="characterSelect" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                       <span ng-bind="fireteam[0].className"></span>
                       <span class="caret"></span>
