--- a/app/views/fireteam/addStats.html
+++ b/app/views/fireteam/addStats.html
@@ -61,7 +61,7 @@
       <div class="row stat-row">
         <div class="col-xs-4 stat">
           <span ng-bind="player.stats.weaponKillsHandCannon.basic.displayValue"></span>
-          <label>Handcannon</label>
+          <label>Hand Cannon</label>
         </div>
         <div class="col-xs-4 stat">
           <span ng-bind="player.stats.weaponKillsPulseRifle.basic.displayValue"></span>
