--- a/app/views/fireteam/info.html
+++ b/app/views/fireteam/info.html
@@ -15,7 +15,7 @@
       <div class="player__char">
         <h2 class="player__gamertag" ng-bind="player.name"></h2>
         <div class="player__race">
-          <span class="hidden-xs">Level</span>
+          <span>Level</span>
           <span ng-bind="player.level"></span>
           <span ng-bind="player.class.name"></span>
         </div>
