goodbye chardin & html cleanup

--- a/app/views/fireteam/gear.html
+++ b/app/views/fireteam/gear.html
@@ -1,8 +1,5 @@
 <div class="gear">
-  <div class="gear__stats row"
-       data-intro="Bar size relative to the percentage of the sum<br/><em>hover over the icons for true percentage</em>"
-       data-position="left"
-       chardin-show="{{isHelpOverlayElement(fireteam.length, $index)}}">
+  <div class="gear__stats row">
     <div class="gear__stat col-xs-4" popover="{{player.intPercent}}%" popover-trigger="mouseenter" popover-append-to-body="true">
       <div class="gear-stat__label">
         Intellect
