--- a/app/views/fireteam/info.html
+++ b/app/views/fireteam/info.html
@@ -1,7 +1,4 @@
-<div class="player__info"
-     data-intro="Hovering over the playercard will reveal subclass perks"
-     data-position="top"
-     chardin-show="{{isHelpOverlayElement(fireteam.length, $index)}}">
+<div class="player__info">
   <div class="player__intro" style="background-image:url('{{player.background[0]}}')">
     <div class="player__title">
       <img class="player__emblem" ng-src="{{player.emblem || ''}}" />
@@ -84,7 +81,7 @@
   </div>
   <div class="player__history">
     <label>Last matches</label>
-    <div class="player-history__matches" trials-history="player.pastActivities" show-help-overlay="isHelpOverlayElement(fireteam.length, $index)"></div>
+    <div class="player-history__matches" trials-history="player.pastActivities"></div>
   </div>
   <div class="player__hazards">
     <div class="player-hazard player-hazard--friendly"
