--- a/app/views/fireteam/weapons.html
+++ b/app/views/fireteam/weapons.html
@@ -1,32 +1,3 @@
-<div class="weapons" data-intro="Weapon images and perks, border color displays damage element, grey if kinetic. </br> <em>Hover over image for weapon name</em>"
-     data-position="left" chardin-show="{{isHelpOverlayElement(fireteam.length, $index)}}">
-  <!--<div class="row ml-0 mr-0 weapon" style="height:130px" ng-repeat="weapon in [player.weapons.primary, player.weapons.special, player.weapons.heavy] track by $index">-->
-    <!--<div class="col-xs-4 pt-10">-->
-      <!--<div class="card mb-0">-->
-        <!--<div class="front p-0">-->
-          <!--<img popover="{{weapon.weapon.name}}" popover-trigger="mouseenter" popover-append-to-body="true"-->
-               <!--class="img-responsive weapon-img {{weapon.weapon.burnColor || 'kinetic-dmg'}}"-->
-               <!--ng-src="{{weapon.weapon.icon}}" alt="{{weapon.weapon.name}}">-->
-        <!--</div>-->
-      <!--</div>-->
-    <!--</div>-->
-    <!--<div class="col-xs-8 pt-10">-->
-      <!--<div ng-if="!fireteam[0].name && !($first || $last)" class="hidden-xs hidden-sm"-->
-           <!--style="width:224px; height:105px; position:absolute; z-index:-1"-->
-           <!--data-intro="Unlocked and active weapon perks <br/><em>hover over the icons for the desciption</em>"-->
-           <!--data-position="right" chardin-show="hidden-xs hidden-sm {{$middle ? '' : 'hidden'}}"></div>-->
-      <div weapon-nodes="[player.weapons.primary, player.weapons.special, player.weapons.heavy]" show-help-overlay="isHelpOverlayElement(fireteam.length, $index)"></div>
-      <!--<div class="row" ng-repeat="node in weapon.nodes" ng-show="node.name"-->
-           <!--popover="{{node.description}}" popover-trigger="mouseenter" popover-append-to-body="true">-->
-        <!--<div class="col-xs-2">-->
-          <!--<a class="icon icon-darkgray lt m-0" style="width:22px; height:22px">-->
-            <!--<img class="img-responsive" ng-src="{{node.icon || ''}}">-->
-          <!--</a>-->
-        <!--</div>-->
-        <!--<div class="col-xs-10">-->
-          <!--<span class="text-left text-sm" ng-bind="node.name"></span>-->
-        <!--</div>-->
-      <!--</div>-->
-    <!--</div>-->
-  <!--</div>-->
+<div class="weapons">
+  <div weapon-nodes="[player.weapons.primary, player.weapons.special, player.weapons.heavy]"></div>
 </div>
