--- a/app/views/fireteam/history.html
+++ b/app/views/fireteam/history.html
@@ -4,13 +4,9 @@
       <span class="last-match__result last-match__result--win" ng-if="player.allStats.standing.basic.value === 0"></span>
       <span class="last-match__result last-match__result--loss" ng-if="player.allStats.standing.basic.value === 1"></span>
       <span class="last-match__score">
-        <span class="last-match__score--team">
-          {{player.allStats.score.basic.value}}
-        </span>
+        <span class="last-match__score--team" ng-bind="player.allStats.score.basic.value"></span>
         -
-        <span class="last-match__score--opponents">
-          {{player.allStats.allParticipantsScore.basic.value - player.allStats.score.basic.value}}
-        </span>
+        <span class="last-match__score--opponents" ng-bind="player.allStats.allParticipantsScore.basic.value - player.allStats.score.basic.value"></span>
       </span>
     </div>
     <div class="row">
@@ -68,7 +64,7 @@
         <div class="last-match-weapon col-xs-12" ng-repeat="weapon in player.playerWeapons track by $index">
           <div class="row">
             <div class="col-xs-6 last-weapon-weapon__descr">
-              <img class="last-match-weapon__img img-responsive" ng-src="{{getWeaponByHash(weapon.referenceId).icon || ''}}">
+              <img class="last-match-weapon__img img-responsive" ng-src="{{getWeaponByHash(weapon.referenceId).icon}}">
               <span class="last-match-weapon__title" ng-bind="getWeaponByHash(weapon.referenceId).name"></span>
             </div>
             <div class="col-xs-2 stat">
@@ -85,7 +81,7 @@
              ng-if="getWeaponTitle(specialWeapon.id)">
           <div class="row">
             <div class="col-xs-6 last-weapon-weapon__descr">
-              <span class="last-match-weapon__img" style="background-image: url({{player.classNodes.abilities[specialWeapon.id].icon || ''}});"></span>
+              <span class="last-match-weapon__img" style="background-image: url({{player.classNodes.abilities[specialWeapon.id].icon}});"></span>
               <span class="last-match-weapon__title" ng-bind="player.classNodes.abilities[specialWeapon.id].name"></span>
             </div>
             <div class="col-xs-2 stat">
@@ -100,10 +96,9 @@
   <div class="last-match__medals">
     <div class="row">
       <div class="col-xs-2" ng-repeat="medal in player.medals track by $index"
-            popover="{{DestinyMedalDefinition[medal.id].statDescription}}"
-            popover-title="{{DestinyMedalDefinition[medal.id].statName}}"
-            popover-trigger="mouseenter" popover-append-to-body="true">
-        <img class="img-responsive" ng-src="{{('https://www.bungie.net' + DestinyMedalDefinition[medal.id].iconImage) || ''}}">
+           data-title="{{DestinyMedalDefinition[medal.id].statName}}"
+           data-content="{{DestinyMedalDefinition[medal.id].statDescription}}" bs-popover>
+        <img class="img-responsive" ng-src="{{'https://www.bungie.net' + DestinyMedalDefinition[medal.id].iconImage}}">
       </div>
     </div>
   </div>
