add stat numbers to popover

--- a/app/views/fireteam/gear.html
+++ b/app/views/fireteam/gear.html
@@ -1,6 +1,6 @@
 <div class="gear">
   <div class="gear__stats row">
-    <div class="gear__stat col-xs-4" data-content="{{player.intPercent}}%" bs-popover>
+    <div class="gear__stat col-xs-4" data-content="{{'Intellect: ' + player.int + ' (' + player.intPercent + '%)'}}" bs-popover>
       <div class="gear-stat__label">
         Intellect
       </div>
@@ -12,7 +12,7 @@
         </progress>
       </div>
     </div>
-    <div class="gear__stat col-xs-4" data-content="{{player.disPercent}}%" bs-popover>
+    <div class="gear__stat col-xs-4" data-content="{{'Discipline: ' + player.dis + ' (' + player.disPercent + '%)'}}" bs-popover>
       <div class="gear-stat__label">
         Discipline
       </div>
@@ -24,7 +24,7 @@
         </progress>
       </div>
     </div>
-    <div class="gear__stat col-xs-4" data-content="{{player.strPercent}}%" bs-popover>
+    <div class="gear__stat col-xs-4" data-content="{{'Strength: ' + player.str + ' (' + player.strPercent + '%)'}}" bs-popover>
       <div class="gear-stat__label">
         Strength
       </div>
